# stk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
backend/api/: __init__.py  server.py
backend/data/mock_generators/: __init__.py  fundamentals.py  macro_data.py  options_data.py  price_data.py  sentiment_data.py
backend/features/: __init__.py  feature_store.py  hourly.py  lagged.py  regime.py  sector.py  tier1_price_volume.py  tier2_technical.py  tier3_options.py  tier4_fundamentals.py  tier5_sentiment.py  tier6_institutional.py  tier7_macro.py  tier8_microstructure.py
backend/llm/: __init__.py  intent_parser.py  mock_llm.py  response_generator.py
backend/models/: __init__.py  ensemble.py  explain.py  lgbm_models.py  lstm_model.py  train.py  xgboost_models.py
backend/utils/: __init__.py  backtesting.py  config.py  invalidation.py  retry.py
cli/: __init__.py  config.py  db.py  engine.py  errors.py  main.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
scripts/: demo_prediction.py  run_backtest.py  run_system.py  test_features.py  test_generators.py  validate_features.py
tests/: conftest.py  test_api.py  test_cache.py  test_cli.py  test_edge_cases.py  test_engine.py  test_errors.py  test_features.py  test_generators.py  test_integration.py  test_llm.py  test_ml_pipeline.py  test_ml_rebuild.py  test_models.py  test_per_ticker.py  test_providers.py  test_retry.py  test_utils.py  test_websocket.py
(+11 files in other folders)
